--- a/Trabajo 1/index.html
+++ b/Trabajo 1/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
-    <img class="img" src="imagen/image-qr-code.png"/>
-    <p class="paragraph">Improve your front-end skills by building projects</p>
-    <p class="subparagraph">Scan the QR code to visit Fontend Mentor and take your coding skills to next level</p>
-</body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="container">
+    <div class="card">
+      <img class="img" src="imagen/image-qr-code.png" />
+      <p class="paragraph">
+        Improve your front-end skills by building projects
+      </p>
+      <p class="subparagraph">
+        Scan the QR code to visit Fontend Mentor and take your coding skills to
+        next level
+      </p>
+    </div>
+  </body>
 </html>
