--- a/Proyecto 2/index.html
+++ b/Proyecto 2/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto 2</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="card">
@@ -20,15 +26,12 @@
       </div>
       <div class="card__lower lower">
         <ul>
-            <li>Git Hub</li>
-            <li>Frontend Mentor</li>
-            <li>Linkedin</li>
-            <li>Twitter</li>
-            <li>Instagram</li>
-
+          <li>Git Hub</li>
+          <li>Frontend Mentor</li>
+          <li>Linkedin</li>
+          <li>Twitter</li>
+          <li>Instagram</li>
         </ul>
-
-
       </div>
     </div>
   </body>
