--- a/Proyecto 2/index.html
+++ b/Proyecto 2/index.html
@@ -25,12 +25,12 @@
         <h3 class="upper__description">Conquistadora de naciones</h3>
       </div>
       <div class="card__lower lower">
-        <ul>
-          <li>Git Hub</li>
-          <li>Frontend Mentor</li>
-          <li>Linkedin</li>
-          <li>Twitter</li>
-          <li>Instagram</li>
+        <ul class="lower__list list">
+          <li class="list__button"><a href="#" class="list__link">Github</a> </li>
+          <li class="list__button"><a href="#" class="list__link">Frontend Mentor</a></li>
+          <li class="list__button"><a href="#" class="list__link">Linkedin</a></li>
+          <li class="list__button"><a href="#" class="list__link">Twitter</a></li>
+          <li class="list__button"><a href="#" class="list__link">Instagram</a></li>
         </ul>
       </div>
     </div>
