Cronometro css terminado

--- a/Cronometro/index.html
+++ b/Cronometro/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronometro</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="layout">
@@ -14,15 +17,15 @@
                     <time class="crono__time">00:00</time>
 
                     <div class="crono__btn">
-                        <span class="crono__start">Inicar</span>
+                        <span class="crono__start">Iniciar</span>
                         <span class="crono__pause">Pausar</span>
                     </div>
                 </div>
             </section>
             <nav class="main__nav nav">
-                <span class="nav__title">Cronometro</span>
-                <span class="nav__title">Reloj</span>
-                <span class="nav__title">Alarma</span>
+                <span class="nav__item">Cronometro</span>
+                <span class="nav__item">Reloj</span>
+                <span class="nav__item">Alarma</span>
 
             </nav>
 
