--- a/Proyecto 19/index.html
+++ b/Proyecto 19/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto 19</title>
-    <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main class="container">
+      <div class="container__title">Ejercicio 16 CSS</div>
+      <article class="container__article">
+        <div class="article__title">Contenido principal</div>
+        <div class="article__test">Articulo de prueba</div>
+        <div class="article__test">Articulo de prueba</div>
+        <div class="article__test">Articulo de prueba</div>
+        <div class="article__test">Articulo de prueba</div>
+        <div class="article__test">Articulo de prueba</div>
+        <div class="article__test">Articulo de prueba</div>
+        
+      </article>
+
+      <aside class="container__aside">Barra lateral</aside>
+    </main>
+  </body>
 </html>
