--- a/Proyecto 1 JS/index.html
+++ b/Proyecto 1 JS/index.html
@@ -6,11 +6,11 @@
     <title>Proyecto 1</title>
 </head>
 <body>
-    
+    <h1>Funcion</h1>
 
 
 
 
-    <script src="primitivo.js"></script>
+    <script src="funcion.js"></script>
 </body>
 </html>
