--- a/Proyecto 19/index.html
+++ b/Proyecto 19/index.html
@@ -21,7 +21,7 @@
         
       </article>
 
-      <aside class="container__aside">Barra lateral</aside>
+      <aside class="funcionesflecha.js">Barra lateral</aside>
     </main>
   </body>
 </html>
